--- a/map/Makefile
+++ b/map/Makefile
@@ -1,12 +1,13 @@
-CC = c++
+CC = clang++
 SRC = main.cpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = map
+FLAGS_DEBUG = --std=c++98 -Wall -Wextra -Werror -fsanitize=address -g3
 
 all: $(NAME)
 
 $(NAME): $(SRC)
-	$(CC) $(FLAGS) $(SRC) -o $(NAME)
+	$(CC) $(FLAGS_DEBUG) $(SRC) -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
