--- a/vector/Makefile
+++ b/vector/Makefile
@@ -1,6 +1,6 @@
 CC = c++
 SRC = main.cpp
-FLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
+FLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = vector
 
 all: $(NAME)
