--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,14 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "(lldb) Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "${workspaceFolder}/map/map",
+            "MIMode": "lldb"
+        }
+
+    ]
 }
