--- a/map/Makefile
+++ b/map/Makefile
@@ -1,5 +1,6 @@
 CC = clang++
 SRC = main.cpp
+HEADER = avl.hpp map_iterator.hpp map.hpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = map
 FLAGS_DEBUG = --std=c++98 -Wall -Wextra -Werror -fsanitize=address -g3
