--- a/vector/Makefile
+++ b/vector/Makefile
@@ -1,11 +1,12 @@
 CC = c++
 SRC = main.cpp
+HEADER = iterator.hpp vector.hpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = vector
 
 all: $(NAME)
 
-$(NAME): $(SRC)
+$(NAME): $(SRC) $(HEADER)
 	$(CC) $(FLAGS) $(SRC) -o $(NAME)
 
 clean:
