--- a/stack/Makefile
+++ b/stack/Makefile
@@ -1,5 +1,6 @@
 CC = clang++
 SRC = main.cpp
+HEADER = stack.hpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = stack
 FLAGS_DEBUG = --std=c++98 -Wall -Wextra -Werror -fsanitize=address -g3
